--- a/client/src/Profile/Profile.css
+++ b/client/src/Profile/Profile.css
@@ -100,4 +100,32 @@ textarea{
     margin: auto;
 }
 
+.links_wrapper{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
+    justify-content: center;
+    align-items: center;
+}
 
+.link_edit{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+    gap: 8px;
+
+    background-color: rgb(240, 240, 240);
+    padding: 10px;
+    border-radius: 15px;
+    width: 30vw;
+}
+
+
+
+.pro_info{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+}
